# privatepay

./: .env.example  .gitignore  FINAL_IMPLEMENTATION_REPORT.md  package-lock.json  package.json  vite.config.js
aztec/: README.md
aztec/contracts/: DummyZEC.nr  PZUSD.nr  ZcashBridge.nr
backend/: README.md  index.js  package.json
backend/services/: bridgeOperator.js  oracle.js
docs/: BRIDGE_ARCHITECTURE.md  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  IMPLEMENTATION_STATUS.md  STABLECOIN_DESIGN.md
solana/: Anchor.toml  Arcium.toml  Cargo.toml  README.md  build.sh  build_all.sh  build_anchor.sh  build_arcium.sh  build_verbose.sh  check_env.sh  copy_arcis.sh  deploy.sh  get_program_id.sh  install_arcium.sh  package-lock.json  package.json  run_arcium_build.sh  setup_arcium.sh  tsconfig.json  verify_setup.sh
solana/artifacts/: circuits_hash.txt
solana/encrypted-ixs/: Cargo.toml
solana/encrypted-ixs/src/: lib.rs
solana/migrations/: deploy.ts
solana/programs/private_pay/: Cargo.toml
solana/programs/private_pay/src/: lib.rs
solana/tests/: private_pay.ts
src/: main.jsx  router.jsx
src/components/bridge/: Bridge.jsx
src/layouts/: AuthLayout.jsx
src/lib/aztec/: README.md  aztecClient.js  bridge.js  encryptedNotes.js  index.js
src/lib/zcash/: README.md  index.js  partialNotes.js  zcashRPC.js  (+1 more)
src/pages/: ArciumDashboard.jsx  BridgePage.jsx  DarkPoolPage.jsx  PrivatePaymentsPage.jsx  PrivateSwapPage.jsx  StablecoinPage.jsx
src/providers/: DynamicProvider.jsx  RootProvider.jsx  SolanaProvider.jsx
tests/integration/: bridge.test.js  stablecoin.test.js
