[package]
name = "private-pay"
version = "0.1.0"
description = "Private DeFi application with Arcium MPC for encrypted payments, swaps, and dark pool trading"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_pay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-anchor = "0.5.2"
arcium-macros = "0.5.2"
arcium-client = { version = "0.5.2", default-features = false }

